# configSetup

./: .gitignore  README.md  pad.txt
cProject/: Makefile  debug.sh  main.c  server.c
ccProject/: CMakeLists.txt  single.cc  test.cpp  thread.cc  threadPool.h  virtual.h  x.sh
ccProject/include/: io_worker.h  single.h  thread_pool.h
ccProject/src/: io_worker.cc  test.cc
fish/: config.fish
goProject/cocurency/: co.go  co_test.go
goProject/http/: setup.sh
goProject/http/scripts/: db.sql
goProject/reflect/: ref_test.go
goProject/select/: racer.go
goProject/src/: demo.go  demo_test.go  generic.go  generic_test.go  ptr.go  ptr_test.go  slice.go  slice_test.go  struct_inter.go  struct_inter_test.go
http/: docker-compose.yml
http/fib1/: Dockerfile  fib1.toml  http.go
http/fib2/: Dockerfile  fib2.toml  http.go
http/nginx/: Dockerfile  nginx.conf
mysql/: sakila.sh
raytrace/: CMakeLists.txt  x.sh
raytrace/src/: main.cpp
vim/: .vimrc
